fix height on smaller screens and updates on gainers losers table

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -424,6 +424,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.table {
+  display: table;
+}
 
 body,
 html {
